--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "echarts": "^3.8.5",
     "element-ui": "1.4.12",
     "file-saver": "^1.3.3",
+    "is-wsl": "^1.1.0",
     "js-cookie": "^2.2.0",
     "jsonlint": "^1.6.2",
     "jszip": "^3.1.5",
     "mockjs": "^1.0.1-beta3",
     "normalize.css": "^7.0.0",
     "nprogress": "^0.2.0",
+    "qs": "^6.5.2",
     "screenfull": "^3.3.2",
     "showdown": "^1.8.6",
     "simplemde": "^1.11.2",
